LayoutTests/fast/mediastream/change-tracks-media-stream-being-played.html is crashing after r231304 https://bugs.webkit.org/show_bug.cgi?id=185303

Reviewed by Eric Carlson.

We need to stop observing the audio track like we do for video track once we are no longer interested in it.
Covered by test no longer crashing.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaStreamAVFObjC.mm:
(WebCore::MediaPlayerPrivateMediaStreamAVFObjC::updateTracks):


Canonical link: https://commits.webkit.org/200791@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@231358 268f45cc-cd09-0410-ab3c-d52691b4dbfc